--- a/src/index.scss
+++ b/src/index.scss
@@ -52,6 +52,7 @@ ul {
   font-weight: 600;
   background-color: #0B4B62;
   position: fixed;
+  z-index: 5;
   top: 0;
   span{
 color: white;
@@ -76,7 +77,7 @@ body {
 padding-top:7rem ;
  
 #root,.App {
-    min-height: 100vh;
+    min-height: 70vh;
     width: 100%;
     display: flex;
     flex-direction: row;
