--- a/src/pages/MyMedicine/MyMedicine.scss
+++ b/src/pages/MyMedicine/MyMedicine.scss
@@ -1,4 +1,4 @@
-.MedicalInfo-Container{
+.Medicine-Container{
 
     display: flex;
     flex-direction: row;
@@ -11,20 +11,17 @@
      top:7rem ;
     
     }
-    .MedicalInfoImg{
+    .MedicineImg{
     
      height: 70vh;
+ 
     
-     
-  
     
     }
-    .Img-MedicalInfo{
+    .Img{
     width: 100%;
     height: 100%;
     object-fit: cover;
-    
-
     
     }
     .formContainer{
@@ -44,7 +41,7 @@
  
     
     }
-    .form-control-MedicalInfo{
+    .form-control-Medicine{
         display: flex;
         flex-direction: column;
         flex-wrap: wrap;
@@ -62,7 +59,6 @@
         font-weight: 700;
         margin-top: 1rem;
         color: white;
-       
        
     }
     .btn-Upload-Medicine{
@@ -128,15 +124,16 @@
 
     color: white;
    }
-
-
-input{
+ input{
     border-radius: 2rem;
     width: 75%;
  
  }
- select{
+select{
 
-
-    width: 75%;
- }
+    border-radius: 2rem;
+    padding: 0.5rem;
+    border-color: transparent;
+    outline: none;
+  
+}
