--- a/src/Sections/Medicine/Medicine.scss
+++ b/src/Sections/Medicine/Medicine.scss
@@ -7,7 +7,10 @@
     flex-wrap: nowrap;
     height: 60vh;
     background-color: transparent;
-
+    button{
+        background-color: white;
+        color: #0c5264;
+    }
 
 
 }
@@ -35,28 +38,23 @@ img {
 
 .AddMedicine {
     border-radius: 0.5rem;
-    background-color: black;
+    background-color: white;
     outline: none;
     border: none;
     margin-top: 1rem;
-
-    color: rgb(255, 0, 98);
+color: #0c5264;
 
 }
 
 .btn {
 
     text-decoration: none;
+    background-color: white;
 
 }
 
-.medicine-container {
 
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-end;
 
-}
 
 .medicine-container {
     display: flex;
@@ -65,5 +63,13 @@ img {
     flex-wrap: nowrap;
     align-content: center;
     align-items: center;
-    background-color: #087E8B;
+    background-color: #0c5264;
+    width: 97%;
+    border-radius: 3rem;
+    margin: 2rem 0;
+    background-image: linear-gradient(169deg, #08384a, #0B4B62, #3a717d);
+    button{
+        background-color: white;
+        color: #0c5264;
+    }
 }
