--- a/src/Sections/Xray/Xray.scss
+++ b/src/Sections/Xray/Xray.scss
@@ -74,3 +74,15 @@
     color: white;
     background-color: rgb(12, 82, 100); ;
 }
+.Xray {
+    border: solid 4px #135267;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    align-content: center;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    height: 60vh;
+    border-radius: 2rem;
+    width: 96%;
+}
