--- a/src/Sections/medicalDocumentation/medicalDocs.scss
+++ b/src/Sections/medicalDocumentation/medicalDocs.scss
@@ -23,7 +23,7 @@
             font-weight: 500;
             font-style: normal;
             font-size: 3.5rem;
-            color: rgb(12, 82, 100);;
+            color: white(12, 82, 100);;
         }
         p {
             margin: 0;
@@ -44,7 +44,7 @@
          color: rgb(175, 175, 9);
          margin-top: 1rem;
          
-       
+         background-color: white
     
     
          
@@ -54,8 +54,8 @@
         border-color: transparent;
         width: 14rem;
         text-decoration: none;
-        color: white;
-        background-color: rgb(12, 82, 100); ;
+        color:rgb(12, 82, 100); ;
+        background-color: white
 
     }
  
@@ -65,3 +65,18 @@
    }
 
 
+   .medicalDoc {
+    width: 97%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    align-content: center;
+    justify-content: space-between;
+    flex-wrap: nowrap;
+    height: 60vh;
+    background-color: #0c5264;
+    padding: 0 7rem;
+    border-radius: 3rem;
+    background-image: linear-gradient(169deg, #08384a, #0B4B62, #3a717d);
+    margin-bottom: 1.5rem;
+}
