--- a/src/pages/Home/HomePage.scss
+++ b/src/pages/Home/HomePage.scss
@@ -311,42 +311,7 @@
 
 }
 
-.Footer {
 
-  width: 100%;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: space-around;
-  align-content: flex-start;
-  align-items: flex-start;
-  padding-top: 3rem;
-  padding-bottom: 3rem;
-  color: white;
-  margin-top: 1rem;
-  background-color: rgba(32, 113, 180, 0.747);
-
-
-
-
-}
-
-.scanQrCodeSection {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
-  justify-content: space-around;
-  align-content: center;
-  align-items: center;
-  /* direction: ltr; */
-  height: auto;
-  margin-top: 2rem;
-  background-color:#087E8B;
-  height: 60vh;
-  img{
-    height: 50vh;
-  }
-}
 
 
 .ScanQrCode-text-btn-Image {
@@ -358,6 +323,7 @@
     max-width: 27rem;
     color: white;
   }
+
   p {
     margin: 0;
     color: #7f7f7f;
@@ -366,17 +332,20 @@
     font-style: normal;
     font-size: 30px;
     max-width: 30rem;
-}
+  }
+
   display: flex;
   flex-direction: column;
   flex-wrap: nowrap;
   justify-content: flex-start;
   align-content: flex-start;
   align-items: flex-start;
+  width: 70%;
 }
 
 .ScanQrCode-btn {
-color: rgb(10, 48, 80); ;
+  color: rgb(10, 48, 80);
+  ;
   background-color: white;
   margin: 1rem 0;
   border-radius: 0.5rem;
@@ -398,4 +367,46 @@ color: rgb(10, 48, 80); ;
   flex-wrap: nowrap;
   align-content: center;
   align-items: center;
+}
+
+.scanQrCodeSection {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: space-around;
+  align-content: center;
+  align-items: center;
+  /* direction: ltr; */
+  height: auto;
+  margin-top: 2rem;
+  background-color: #0b4b62;
+  height: 60vh;
+  margin-top: -1rem;
+  border-radius: 2rem;
+  width: 96%;
+  position: relative;
+  margin: 3rem 0;
+  background-image: linear-gradient(169deg, #08384a, #0B4B62, #3a717d);
+
+}
+
+.Graph {
+  height: 30rem;
+  width: 30rem;
+  position: absolute;
+  right: 0;
+}
+
+.ScanQrCodeImage {
+  height: 22rem;
+  width: 23rem;
+  position: absolute;
+  right: 120px;
+}
+
+.Graph {
+  height: 35rem;
+  width: 30rem;
+  position: absolute;
+  right: 75px;
 }
