--- a/src/pages/MedIcalInfoForm/MyMedicalInfo.scss
+++ b/src/pages/MedIcalInfoForm/MyMedicalInfo.scss
@@ -140,3 +140,33 @@ input{
 
     width: 75%;
  }
+ .button-container {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 1rem;
+  }
+  
+  .button-container button {
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 16px;
+    outline: none;
+    margin-bottom: 1rem;
+  }
+  
+  .previous-button {
+    background-color: #ccc;
+    color: #fff;
+  }
+  
+  .next-button {
+    background-color: #007bff;
+    color: #fff;
+  }
+  
+  .submit-button {
+    background-color: #28a745;
+    color: #fff;
+  }
