--- a/src/pages/MyXray/MyXray.scss
+++ b/src/pages/MyXray/MyXray.scss
@@ -37,7 +37,7 @@ box-shadow: 0 8px 16px black;
 margin-top: 1rem;
 margin-bottom: 1rem;
 border-radius: 1.5rem;
-background-color: rgb(20, 33, 56) !important;
+
 
 }
 .form-control-Xray{
@@ -60,7 +60,7 @@ label{
     margin-top: 0.5rem;
     margin-bottom: 0.5rem;
 }
-.btn-Upload-Xray{
+.btn-next-Xray{
 
     background-color:blueviolet;
     margin-top: 1rem;
@@ -68,6 +68,31 @@ label{
     color: black;
     font-weight: 500;
     color: white;
+    border-radius: 10px;
+    border-color: transparent;
+    margin-bottom: 1rem;
+    padding: 0.5rem;
+}
+.btn-Submit-Xray{
+
+    background-color:rgb(70, 43, 226);
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    width: 130px;
+    color: black;
+    font-weight: 500;
+    color: white;
+    border-radius: 10px;
+    border-color: transparent;
+    padding: 0.5rem;
+}
+.btn-Submit-Xray:hover{
+
+    background-color: green;
+}
+.btn-next-Xray:hover{
+
+    background-color: rgb(24, 62, 165);
 }
 .MyXray{
 
@@ -89,7 +114,7 @@ background-color: transparent;
     outline: none;
 
    font-size: 1rem;
-   width:100%;
+   width:50%;
    padding: 1rem;
 
    font-weight: 500;
