--- a/src/Sections/Medicine/Medicine.scss
+++ b/src/Sections/Medicine/Medicine.scss
@@ -7,11 +7,7 @@
     flex-wrap: nowrap;
     height: 60vh;
     background-color: transparent;
-    button{
-        background-color: white;
-        color: #0c5264;
-    }
-
+ 
 
 }
 
@@ -24,9 +20,12 @@
     color: white;
 
     .MedicineHeader {
+        font-family: "Bebas Neue", sans-serif;
         font-weight: 500;
-        color: white;
-
+        font-style: normal;
+        font-size: 3.5rem;
+        color:white !important;
+        font-weight: 600;
 
     }
 
@@ -37,21 +36,39 @@ img {
 }
 
 .AddMedicine {
-    border-radius: 0.5rem;
-    background-color: white;
+    width: 14rem;
     outline: none;
     border: none;
     margin-top: 1rem;
-color: #0c5264;
+    background-color: rgb(12, 82, 100);
+  
+    height: 2.5rem;
+    border-radius: 0.5rem;
+    font-weight: 600;
+    color: white !important;
+  
+    
+
+    
 
 }
-
-.btn {
-
-    text-decoration: none;
+.AddMedicine:hover {
     background-color: white;
+    color: rgb(12, 82, 100) !important;
+    transition: .5s;
+    box-shadow: white 0px 0px 17px 0px;
+    font-weight: 600;
+    .Link {
 
+        text-decoration: none;
+        
+        
+        color:rgb(12, 82, 100) !important;
+       
+    }
 }
+
+
 
 
 
@@ -68,8 +85,13 @@ color: #0c5264;
     border-radius: 3rem;
     margin: 2rem 0;
     background-image: linear-gradient(169deg, #08384a, #0B4B62, #3a717d);
-    button{
-        background-color: white;
-        color: #0c5264;
-    }
+  
+}
+.Link{
+
+    text-decoration: none;
+    
+    
+    color:white !important;
+   
 }
