--- a/src/Sections/Xray/Xray.scss
+++ b/src/Sections/Xray/Xray.scss
@@ -1,4 +1,5 @@
 .Xray {
+    border: solid 4px #135267;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -6,7 +7,8 @@
     justify-content: space-around;
     flex-wrap: wrap;
     height: 60vh;
-
+    border-radius: 2rem;
+    width: 96%;
     img {
         height: 45vh;
     }
@@ -20,11 +22,12 @@
     justify-content: flex-start;
     color: white;
 
-    h4 {
+    .XrayHeader{
         font-family: "Bebas Neue", sans-serif;
         font-weight: 500;
         font-style: normal;
         font-size: 3.5rem;
+        color: #0b4b62 !important;
     }
 
     p {
@@ -43,46 +46,41 @@
         font-weight: 600;
     }
 
-    .btn {
-
-        border-radius: 0.5rem;
-        border-color: transparent;
+    .AddXray {
         width: 14rem;
-        text-decoration: none;
+        outline: none;
+        border: none;
+        margin-top: 1rem;
+        background-color: rgb(12, 82, 100);
         color: white;
-        background-color: rgb(12, 82, 100); ;
+        height: 2.5rem;
+        border-radius: 0.5rem;
+        font-weight: 600;
+    }
+    .btn1 {
+        width: 14rem;
+        color: white;   
+         border-radius: 0.5rem;
+        border-color: transparent;
+        text-decoration: none;
+        background-color: rgb(12, 82, 100);
+        font-weight: 600;
+    }
+
+   .AddXray:hover {
+        background-color: white;
+        color: rgb(12, 82, 100);
+        transition: .5s;
+        box-shadow: #0b4b62 0px 0px 17px 0px;
+        font-weight: 600;
+    }
+    .AddXray:hover .btn1{
+        background-color: white;
+        transition: .5s;
+        color: rgb(12, 82, 100);
+        font-weight: 600;
     }
 }
 
-.AddXray {
-    border-radius: 0.5rem;
-    background-color: rgb(12, 82, 100);
-    outline: none;
-    border: none;
-    margin-top: 1rem;
 
 
-
-}
-
-.btn {
-    background-color: rgb(12, 82, 100); ;
-    border-radius: 0.5rem;
-    border-color: transparent;
-    width: 14rem;
-    text-decoration: none;
-    color: white;
-    background-color: rgb(12, 82, 100); ;
-}
-.Xray {
-    border: solid 4px #135267;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    align-content: center;
-    justify-content: space-around;
-    flex-wrap: wrap;
-    height: 60vh;
-    border-radius: 2rem;
-    width: 96%;
-}
