--- a/src/Sections/medicalDocumentation/medicalDocs.scss
+++ b/src/Sections/medicalDocumentation/medicalDocs.scss
@@ -1,4 +1,4 @@
-.medicalDoc{
+.medicalDoc {
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -7,65 +7,53 @@
     flex-wrap: nowrap;
     height: 60vh;
     background-color: white;
- 
 
 
+
+}
+
+.text {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    align-content: flex-start;
+    justify-content: flex-start;
+    color: white;
+
+    .MedicalTest {
+        font-family: "Bebas Neue", sans-serif;
+        font-weight: 500;
+        font-style: normal;
+        font-size: 3.5rem;
+        color: white !important;
+
     }
-    .text{
-        display: flex;
-        flex-direction: column;
-        align-items: flex-start;
-        align-content:flex-start;
-        justify-content: flex-start;
-         color: white;
-         h4 {
-            font-family: "Bebas Neue", sans-serif;
-            font-weight: 500;
-            font-style: normal;
-            font-size: 3.5rem;
-            color: white(12, 82, 100);;
-        }
-        p {
-            margin: 0;
-            color: #7f7f7f;
-            font-family: "Fjalla One", sans-serif;
-            font-weight: 400;
-            font-style: normal;
-            font-size: 30px;
-            max-width: 30rem;
-        }
-       
+
+    p {
+        margin: 0;
+        color: #7f7f7f;
+        font-family: "Fjalla One", sans-serif;
+        font-weight: 400;
+        font-style: normal;
+        font-size: 30px;
+        max-width: 30rem;
     }
-    .AddMedicalDoc{
-        border-radius: 0.5rem;
-         background-color:red;
-         outline: none;
-         border: none;
-         color: rgb(175, 175, 9);
-         margin-top: 1rem;
-         
-         background-color: white
+
+   
+
     
-    
-         
-    }
-    .btn{
-        border-radius: 0.5rem;
-        border-color: transparent;
-        width: 14rem;
-        text-decoration: none;
-        color:rgb(12, 82, 100); ;
-        background-color: white
 
-    }
- 
+   
+}
 
-   img{
+
+
+img {
     height: 40vh;
-   }
+}
 
 
-   .medicalDoc {
+.medicalDoc {
     width: 97%;
     display: flex;
     flex-direction: row;
@@ -79,4 +67,46 @@
     border-radius: 3rem;
     background-image: linear-gradient(169deg, #08384a, #0B4B62, #3a717d);
     margin-bottom: 1.5rem;
+}
+.AddMedicalDoc {
+    width: 14rem;
+    outline: none;
+    border: none;
+    margin-top: 1rem;
+    background-color: #1c6377 !important;
+  
+    height: 2.5rem;
+    border-radius: 0.5rem;
+    font-weight: 600;
+    color: white !important;
+  
+    
+
+    
+
+}
+.AddMedicalDoc:hover {
+    background-color: white !important;
+    color: rgb(12, 82, 100) !important;
+    transition: .5s;
+    box-shadow: white 0px 0px 17px 0px !important;
+    font-weight: 600;
+    .Link {
+
+        text-decoration: none;
+        
+        
+        color:rgb(12, 82, 100) !important;
+       
+    }
+
+
+}
+.Link{
+
+    text-decoration: none;
+    
+    font-weight: 600;
+    text-decoration: none;
+    color: white;
 }
