--- a/src/Sections/medicalInformation/medicalinfo.scss
+++ b/src/Sections/medicalInformation/medicalinfo.scss
@@ -22,7 +22,11 @@
         font-weight: 500;
         font-style: normal;
         font-size: 3.5rem;
-        color: white;
+        color: #0b4b62 !important;
+        font-weight: 600;
+
+
+
     }
 
     p {
@@ -50,35 +54,51 @@
     height: 120%;
     border-radius: 5%;
     width: 30%;
-
-
     background-repeat: no-repeat;
 
 
 }
 
 .AddMedicalInfo {
-    border-radius: 0.5rem;
-    color: rgba(212, 3, 3, 0.795);
+    width: 14rem;
     outline: none;
     border: none;
-    margin-top: 2rem;
-
-
+    margin-top: 1rem;
+    background-color: rgb(12, 82, 100);
+  
+    height: 2.5rem;
+    border-radius: 0.5rem;
     font-weight: 600;
-    background-color: greenyellow;
+    color: white;
 
+
+}
+.AddMedicalInfo:hover {
+    background-color: white;
+    color: rgb(12, 82, 100) !important;
+    transition: .5s;
+    box-shadow: #0b4b62 0px 0px 17px 0px;
+    font-weight: 600;
+    .Link {
+
+        text-decoration: none;
+        
+        
+        color:rgb(12, 82, 100) !important;
+       
+    }
 
 
 }
 
+
 .btn-MedicalInfo {
 
     text-decoration: none;
-    background-color: greenyellow;
     color: white;
     border-radius: 0.3rem;
     padding: 0.5rem;
+    box-shadow: #0b4b62 0px 0px 17px 0px;
 
 }
 
@@ -90,11 +110,7 @@
 
 }
 
-.MedicalInfo-Header {
-    color: greenyellow;
-    font-weight: 600;
 
-}
 
 .btn {
     border-radius: 0.5rem;
@@ -127,4 +143,12 @@
     margin-bottom: 1rem;
     width: 97%;
     border-radius: 3rem;
+}
+.Link{
+
+    text-decoration: none;
+    
+    font-weight: 600;
+    text-decoration: none;
+    color: white;
 }
