--- a/src/pages/LoginPage/index.scss
+++ b/src/pages/LoginPage/index.scss
@@ -1,164 +1,366 @@
 #LoginPage {
-  min-height: 100vh;
-  max-width: 100%;
-background-image: url("../../assets/login.jpg");
-
-background-repeat: no-repeat;
-background-size: cover;
-background-position:50%;
-
-
-
+  min-height: 75vh;
+  width: 98%;
+  background-color: whitesmoke;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   align-content: center;
   justify-content: center;
   align-items: center;
+  padding-top: 5rem;
+  padding-bottom: 2rem;
+
+  .content {
+    width: 80%;
+    height: 90vh;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-content: flex-start;
+    justify-content: flex-start;
+    align-items: flex-start;
+
+    #imageSection {
+      border-radius: 10px 0 0 10px;
+      height: 100%;
+      background-color: #4c4d4d;
+      background-image: url("../../assets/login-bg.jpg");
+      background-size: cover;
+      background-repeat: no-repeat;
+      background-position: 50%;
+
+      .filter {
+        border-radius: 10px 0 0 10px;
+        height: 100%;
+        width: 100%;
+        background-color: rgb(59 15 85 / 97%);
+        color: white;
+        display: flex;
+        flex-direction: column;
+        flex-wrap: nowrap;
+        justify-content: flex-start;
+        align-items: flex-start;
+        padding: 3rem 5%;
+
+        .img {
+          height: 3rem;
+        }
+
+        #mainContent {
+          margin: 1rem 0;
+
+          h1 {
+            font-size: 3rem;
+          }
+
+          p {
+            font-size: 1.1rem;
+          }
+        }
+      }
+    }
+
+    #formSection {
+
+      border-radius: 0 10px 10px 0;
+      height: 100%;
+      background-color: whitesmoke;
+      display: flex;
+      flex-direction: column;
+      flex-wrap: nowrap;
+      align-content: center;
+      justify-content: center;
+      align-items: center;
+      gap: 2rem;
+      box-shadow: 0px 0px 4px 1px #245e49;
+
+
+      form {
+        color: #25634c;
+        display: flex;
+        flex-direction: column;
+        flex-wrap: nowrap;
+        align-content: center;
+        justify-content: center;
+        align-items: center;
+        gap: 3rem;
+
+        h1 {
+          text-align: center;
+        }
+
+        .inputField {
+          display: flex;
+          flex-direction: row;
+          flex-wrap: wrap;
+          align-content: center;
+          justify-content: center;
+          align-items: center;
+
+          label {
+            color: #25634c;
+            padding: 0.6rem 0;
+            font-weight: 500;
+          }
+
+          input {
+
+            background-color: #25634c;
+            color: #25634c;
+            padding: 1rem;
+            border: 0;
+            outline: 0;
+
+            margin-bottom: 1rem;
+          }
+
+          span {
+            font-size: 0.8rem;
+            padding: 0.5rem 1rem;
+            opacity: 0.9;
+          }
+        }
+      }
+    }
+  }
 }
-#log{
-  background-color:rgba(0, 0, 0, 0.603);
-  height: 60vh;
-  border-radius: 1.7%;
-  position: relative;
-}
-#inputform{
-  background-color:rgba(255, 255, 255, 0.616);
-  height:100%;
-  width: 40%;
-  border-radius: 1.7%;
-  position: absolute;
-  right:0;
+
+.password-input {
   display: flex;
-  align-items: center;
+  flex-direction: row;
+  flex-wrap: nowrap;
   align-content: center;
-  flex-direction: column;
   justify-content: center;
-
-  
+  align-items: center;
 }
-input{
-width:70%;
-border-top-left-radius: 1rem;
-border-bottom-left-radius: 1rem;
-border-top-right-radius: 1rem;
-border-bottom-right-radius: 1rem;
-outline:none;
 
-border-color:transparent;
-margin-bottom: 1rem;
-padding: 0.5rem;
-background-color: white;
-
-
-}
-.log-submit{
-
-  background-color:rgb(142, 183, 245);
-  border-top-left-radius: 1rem;
-  border-bottom-left-radius: 1rem;
-  border-top-right-radius: 1rem;
-  border-bottom-right-radius: 1rem;
-  width: 10rem;
-  padding:0.5rem;
-  border-color: transparent;
+.n {
+  background-color: #25634c;
   color: white;
+  padding: 0.92rem;
+  border: 0;
+  outline: 0;
+  border-radius: 8px;
+  margin-bottom: 1rem;
+  margin-top: 0rem;
+  border-radius: 0 8px 8px 0;
 }
-.logo{
-background-image: url("../../assets/besafe.png");
-background-position: 50%;
-background-size: cover;
-background-repeat:no-repeat;
-width: 60%;
-height:35% ;
+
+#p {
+  border-radius: 8px 0 0 8px;
+}
+
+.e {
+  border-radius: 8px;
+}
+
+.b {
+  background-color: #25634c;
+}
+
+.Login {
+  display: flex;
+  height: 30vh;
+  margin: 10rem;
+}
+
+#LoginPage .content {
+  width: 80%;
+  height: 90vh;
+  border-radius: 10px;
+  display: flex;
+  flex-wrap: nowrap;
+  align-content: center;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+}
+
+h2,
+H2 {
+  font-family: Slack-Larsseit, "Helvetica Neue", Helvetica, "Segoe UI", Tahoma, Arial, sans-serif;
+  font-weight: 900;
+  //  font-family: "Exo 2", sans-serif;
+  color: #25634c;
+
+}
+
+#LoginPage .content #imageSection .filter #mainContent p {
+  font-size: 1.1rem;
+  text-align: center;
+}
+
+.gap {
+  gap: 2em;
+}
+
+.btn_Login,
+#btn_Login {
+  font-family: Slack-Larsseit, "Helvetica Neue", Helvetica, "Segoe UI", Tahoma, Arial, sans-serif;
+  font-weight: 800;
+  padding: .8rem;
+  background-color: #25634c;
+  color: white;
+  /* font-size: 1.25rem; */
+
+}
+
+.btn_Login,
+#btn_Login:hover {
+  color: #11031a87;
+  background-color: #25634c;
+  transition: .5s;
+
+}
+
+.error_Msg {
+  color: red;
+}
+
+
+
+
+#LoginPage .content #formSection .SignUpForm {
+  gap: 1rem;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  align-content: center;
+  justify-content: space-evenly;
+  align-items: center;
+  height: 95%;
+}
+
+
+#LoginPage .content #imageSection .filter {
+  border-radius: 10px 0 0 10px;
+  height: 100%;
+  width: 100%;
+  background-color: #25634cf0;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  justify-content: flex-start;
+  align-items: flex-start;
+  padding: 3rem 5%;
+}
+
+.mainContent#LoginPage .content #imageSection .filter #mainContent {
+  margin: auto 0;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  align-content: flex-start;
+  justify-content: center;
+  align-items: flex-start;
+
+}
+
+#LoginPage .content #imageSection .filter #mainContent h1 {
+  font-size: 3rem;
+  color: white;
+  /* text-align: left; */
+  margin: .5rem 0;
+}
+
+.LogoLogin {
+  height: 25%;
+}
+
+@media screen and (min-width: 100px) and (max-width : 780px) {
+
+  /* font at xs */
+  html {
+    font-size: 10px !important;
+  }
 
 
 }
-//   .content {
-//     width: 80%;
-//     height: 90vh;
-//     border-radius: 10px;
-//     display: flex;
-//     flex-direction: row;
-//     flex-wrap: wrap;
-//     align-content: flex-start;
-//     justify-content: flex-start;
-//     align-items: flex-start;
-//     #imageSection {
-//       border-radius: 10px 0 0 10px;
-//       height: 100%;
-//       background-color: #4c4d4d;
-//       background-size: cover;
-//       background-repeat: no-repeat;
-//       background-position: 50%;
-//       .filter {
-//         border-radius: 10px 0 0 10px;
-//         height: 100%;
-//         width: 100%;
-//         background-color: rgba(13, 109, 253, 0.9);
-//         color: white;
-//         display: flex;
-//         flex-direction: column;
-//         flex-wrap: nowrap;
-//         justify-content: flex-start;
-//         align-items: flex-start;
-//         padding: 3rem 5%;
-//         .img {
-//           height: 3rem;
-//         }
-//         #mainContent {
-//           margin: auto 0;
-//           h1 {
-//             font-size: 3rem;
-//           }
-//           p {
-//             font-size: 1.1rem;
-//           }
-//         }
-//       }
-//     }
-//     #formSection {
-//       border-radius: 0 10px 10px 0;
-//       height: 100%;
-//       background-color: rgb(17, 20, 24);
-//       display: flex;
-//       flex-direction: row;
-//       flex-wrap: wrap;
-//       align-content: center;
-//       justify-content: center;
-//       align-items: center;
-//       form {
-//         color: white;
-//         h1 {
-//           text-align: center;
-//         }
-//         .inputField {
-//           display: flex;
-//           flex-direction: row;
-//           flex-wrap: wrap;
-//           align-content: flex-start;
-//           justify-content: flex-start;
-//           align-items: flex-start;
-//           label {
-//             color: #dee3e4;
-//             padding: 0.6rem 0;
-//           }
-//           input {
-//             background-color: #232a31;
-//             color: white;
-//             padding: 1rem;
-//             border: 0;
-//             outline: 0;
-//             border-radius: 8px;
-//             margin-bottom: 1rem;
-//           }
-//           span {
-//             font-size: 0.8rem;
-//             padding: 0.5rem 1rem;
-//             opacity: 0.9;
-//           }
-//         }
-//       }
-//     }
-//   }
-// }
+
+
+
+@media screen and (min-width: 100px) and (max-width: 780px) {
+  .gap {
+    gap: .5em;
+  }
+
+  #LoginPage .content {
+    width: 100%;
+    height: auto;
+    border-radius: 5px;
+    display: flex;
+    flex-wrap: nowrap;
+    align-content: center;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+  }
+
+  /* CSS rules for screens with widths between 100px and 780px */
+  #LoginPage .content #formSection {
+    width: 90%;
+    height: auto;
+    border-radius: 1rem;
+    padding: 3rem 0;
+    box-shadow: none;
+    border: solid 2px #25634c;
+  }
+
+  #imageSection {
+    display: none;
+  }
+}
+
+input:focus {
+  box-shadow: none;
+  outline: none;
+}
+
+.input3 {
+
+  // Styles for the input element in its default state
+
+  &:focus {
+    // Styles for the input element when it is in focus
+    // For example:
+    outline: none; // Remove default focus outline (not recommended for accessibility)
+    border-color: #25634c; // Change border color when focused
+    box-shadow: #25634c 0px 0px 4px 2px;
+  }
+}
+
+#LoginPage .content #formSection .login12 {
+  color: #25634c;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  align-content: center;
+  justify-content: center;
+  align-items: center;
+  gap: 3rem;
+  height: auto;
+}
+
+.Forget {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  align-content: center;
+  justify-content: center;
+  align-items: center;
+}
+
+.margin {
+  margin: 0 .25rem;
+}
+
+.Linko {
+  color: #25634c;
+  font-size: 1rem;
+  font-weight: 500;
+  text-transform: capitalize;
+  text-decoration: underline;
+}
