--- a/src/pages/MyMedicalTestForm/MyMedicalTestForm.scss
+++ b/src/pages/MyMedicalTestForm/MyMedicalTestForm.scss
@@ -6,10 +6,9 @@
     align-content: center;
     align-items: center;
 
-    justify-content: space-around;
+    justify-content: center !important;
 
- position: absolute;
- top:7rem ;
+
     
     
     }
@@ -26,26 +25,7 @@
     object-fit: cover;
     
     }
-    .formContainer{
-    display: flex;
-    flex-direction: column;
-    flex-wrap: nowrap;
-    align-content: center;
-    align-items: center;
-    justify-content: center;
     
-
-    z-index:3;
-    box-shadow: 0 8px 16px black;
-    margin-top: 1rem;
-    margin-bottom: 1rem;
-    border-radius: 1.5rem;
-    background-color: rgb(26, 26, 85);
-    
-    
-    
-    
-    }
     .form-control-Test{
         display: flex;
         flex-direction: column;
@@ -53,56 +33,41 @@
         align-content: center;
         align-items: center;
         justify-content: center;
-      
+        
         border-radius: 1.5rem;
-     
-
+        background-color: white;
+        border: solid 4px  #0B4B62;
+     gap: 1.2rem;
+        z-index:3;
+    box-shadow: 0 8px 16px black;
 
        
     
     }
     
-    label{
-    
-        font-weight: 700;
-        margin-top: 0.5rem;
-        margin-bottom: 0.5rem;
-    }
-    .btn-Upload{
-    
  
-        margin-top: 1rem;
-        width: 30%;
-        color: white;
-        background-color:white;
-        color: white;
-        font-weight: 600;
-        background-color: rgb(119, 25, 241);
-    }
+
     .MyMedicalTest{
     
         color: white;
+      
+
     }
     
     .myComment-Input{
-
         border-radius: 1rem;
-        background-color: white;
+
+  
+        font-size: 1rem;
+        width: 90% !important;
+        padding: 1rem;
+        font-weight: 500;
+      background-color: gainsboro !important;
         outline: none;
+        border-color: transparent;
     
-       font-size: 1rem;
-       width:100%;
-       padding: 1rem;
-     
-    
-     
-       font-weight: 500;
-
     }
-    .MyComment{
 
-        color: white;
-    }
        
     .MyMedicalTest-File{
 
