--- a/src/index.scss
+++ b/src/index.scss
@@ -97,7 +97,7 @@ body {
   align-items: flex-start;
   align-content: flex-start;
   justify-content: flex-start;
-  padding-top: 7rem;
+  // padding-top: 7rem;
 
   #root,.App {
     min-height: 70vh;
