--- a/src/index.scss
+++ b/src/index.scss
@@ -14,6 +14,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Gurajada&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Koulen&display=swap');
+
 * {
   padding: 0;
   margin: 0;
@@ -25,7 +26,12 @@ html {
   scroll-behavior: smooth;
 }
 
-p,h1,h2,h3,span,ul {
+p,
+h1,
+h2,
+h3,
+span,
+ul {
   margin: 0;
 }
 
@@ -50,28 +56,30 @@ p,h1,h2,h3,span,ul {
   top: 0;
   /* height: 3rem; */
 
-.Linkss{
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  align-items: center;
-  align-content: flex-start;
-  justify-content: flex-start;
-  padding: 1rem;
-  font-weight: 600;
-  background-color: rgb(255 255 255);
-  color: #0B4B62;
-  a {
+  .Linkss {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+    align-content: flex-start;
+    justify-content: flex-start;
+    padding: 1rem;
+    font-weight: 600;
+    background-color: rgb(255 255 255);
     color: #0B4B62;
+
+    a {
+      color: #0B4B62;
+    }
+
   }
 
-}
-.logo1{
-  img {
-    height: 2rem;
-    width: 10rem;
+  .logo1 {
+    img {
+      height: 2rem;
+      width: 10rem;
+    }
   }
-}
 
 
   span {
@@ -97,9 +105,10 @@ body {
   align-items: flex-start;
   align-content: flex-start;
   justify-content: flex-start;
-  // padding-top: 7rem;
+  padding-top: 7rem;
 
-  #root,.App {
+  #root,
+  .App {
     min-height: 70vh;
     width: 100%;
     display: flex;
@@ -143,6 +152,7 @@ body {
     font-size: 16px !important;
   }
 }
+
 .menu-toggle {
   display: none;
   cursor: pointer;
@@ -162,16 +172,19 @@ body {
 }
 
 .menu a:hover {
-  color: #ffc107; /* Change the color on hover */
+  color: #ffc107;
+  /* Change the color on hover */
 }
 
 @media (max-width: 768px) {
   .menu-toggle {
-    display: flex; /* Show the menu toggle icon on smaller screens */
+    display: flex;
+    /* Show the menu toggle icon on smaller screens */
   }
 
   .menu {
-    display: none; /* Hide the menu on larger screens */
+    display: none;
+    /* Hide the menu on larger screens */
     position: absolute;
     top: 60px;
     left: 0;
@@ -182,14 +195,16 @@ body {
   }
 
   .active {
-    display: flex; /* Show the menu when active */
+    display: flex;
+    /* Show the menu when active */
   }
 
   .menu a {
     margin: 10px 0;
-    color :black
+    color: black
   }
 }
+
 .notification-link {
   position: relative;
   display: inline-block;
@@ -201,11 +216,10 @@ body {
   right: -0.5rem;
   transform: translate(50%, -50%);
   background-color: #0B4B62;
-  color:   white !important;
+  color: white !important;
   border-radius: 50%;
   padding: 1px 3px;
- font-weight: lighter !important;
+  font-weight: lighter !important;
   line-height: 1;
 
 }
-
