--- a/src/index.scss
+++ b/src/index.scss
@@ -57,7 +57,7 @@ body {
     flex-wrap: nowrap;
     align-items: center;
     align-content: center;
-    justify-content: center;
+    justify-content: flex-start;
   }
 }
 
