--- a/src/pages/Qr-Info-In-Scan/QrInformation.scss
+++ b/src/pages/Qr-Info-In-Scan/QrInformation.scss
@@ -19,8 +19,9 @@
     flex-wrap: nowrap;
     align-content: center;
     justify-content: space-between;
-    width: 80%;
+    width: 95%;
     align-items: center;
+    padding-left: 2.6rem;
 }
 
 .Fonto {
@@ -55,14 +56,16 @@
         font-style: normal;
         text-decoration-line: none;
     }
+
 }
 
-.ImgContainer {
-    img {
-        height: 40vh;
-        border-radius: 10rem;
-        // border: solid 2px black;
-    }
+.ImgContainer img {
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    overflow: hidden;
+    position: relative;
+    background-color: #f0f0f0;
 }
 
 .UserInfo {
@@ -109,3 +112,124 @@
 }
 
 .userInfoBorder {}
+
+.card1 {
+    padding: 1rem;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    align-content: center;
+    justify-content: flex-start;
+    align-items: flex-start;
+    width: 47%;
+    background-color: whitesmoke;
+    height: 20vh;
+    border-radius: 1rem;
+    padding-top: 0.5rem;
+
+
+    .titlee {
+        font-size: 2rem;
+        font-weight: 700;
+        color: rgb(231, 31, 31);
+    }
+
+    .flexR {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        align-content: center;
+        justify-content: flex-start;
+        align-items: center;
+        gap: 0;
+    }
+
+    .icon {
+        font-size: 1.5rem;
+        margin: 0;
+        margin-right: .5rem;
+        color: #08384a;
+    }
+
+    span {
+        font-size: 2rem;
+        font-family: "Gurajada", sans-serif;
+        font-weight: 400;
+        font-style: normal;
+        color: #08384a;
+    }
+
+    a {
+        font-size: 2rem;
+        font-family: "Gurajada", sans-serif;
+        font-weight: 400;
+        font-style: normal;
+        text-decoration-line: none;
+    }
+}
+
+.flexR {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-content: center;
+    justify-content: center;
+    align-items: center;
+    gap: 1.25rem;
+}
+
+.flexC {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    align-content: center;
+    justify-content: center;
+    align-items: flex-start;
+}
+
+.flexC {
+    h1 {
+        max-width: 100%;
+        font-size: 1.5rem;
+        font-weight: 700;
+        color: white;
+        margin: 1rem 0;
+        text-align: left;
+    }
+
+    span {
+        color: white;
+        font-size: 1.25rem;
+        font-weight: 400;
+        font-family: sans-serif;
+        text-align: left;
+    }
+}
+
+.bootom {
+    width: 95%;
+    margin-top: 1rem;
+}
+
+.bootom ul li {
+    padding: .25rem;
+    background-color: #3a717d;
+    color: white;
+    font-size: 1.25rem;
+    text-align: left;
+}
+
+
+.QrcodeScanning {
+    text-align: center;
+}
+
+.error-message {
+    position: relative;
+    display: inline-block;
+    background-color: #f8d7da;
+    color: #721c24;
+    padding: 1rem;
+    border: 1px solid #f5c6cb;
+    border-radius: 0.25rem;
+}
